# leaning

./: README.md  main.cpp  test.drawio
Assignment6/: Renderer.cpp
Computer Graphics/: a.cpp  test.cpp
GLAD/: hello world.cpp
MemoryManagement/: MemonryManagement.Hpp  MemonryManagement.cpp  main.cpp
work1/: main.cpp
work2/: main.cpp  rasterizer.cpp
work3/: CMakeCache.txt  CMakeLists.txt  OBJ_Loader.h  Texture.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
work4/: main.cpp
work5/: Renderer.cpp  Triangle.hpp
work6/: BVH.cpp  Bounds3.hpp  Triangle.hpp
work7/: BVH.cpp  Bounds3.hpp  Material.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Triangle.hpp  binary.ppm  main.cpp
